--- a/demos/resource-views.html
+++ b/demos/resource-views.html
@@ -25,7 +25,8 @@
           duration: {
             days: 7
           },
-          buttonText: "resource"
+          buttonText: "resource",
+          resourceColTitle: "Resources"
         }
       },
       allDaySlot: false, // Unsupported yet
