--- a/demos/resource-views.html
+++ b/demos/resource-views.html
@@ -13,14 +13,14 @@
       header: {
         left: 'prev,next today',
         center: 'title',
-        right: 'resourceWeek'
+        right: 'timeline'
       },
       defaultDate: '2014-11-12',
       editable: true,
       eventLimit: true, // allow "more" link when too many events
-      defaultView: 'resourceWeek',
+      defaultView: 'timeline',
       views: {
-        resourceWeek: {
+        timeline: {
           type: 'resource',
           duration: {
             days: 7
